projects/vb6parse/snapshots/parsers/cst/library/file/filedatetime/filedatetime_comparison.snap
---
source: projects/vb6parse/tests/library/file/filedatetime.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: isNewer
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: ParenthesizedExpression
          children:
            - kind: LeftParenthesis
              text: (
            - kind: BinaryExpression
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: FileDateTime
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: file1
                    - kind: RightParenthesis
                      text: )
                - kind: Whitespace
                  text: " "
                - kind: GreaterThanOperator
                  text: ">"
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: FileDateTime
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: file2
                    - kind: RightParenthesis
                      text: )
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
